[project]
name = "asciifite"
version = "0.1.0"
description = "A small ASCII art conversion utility."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nimoosec", email = "nimuthudulsana@gmail.com" }
]

keywords = ["ascii", "art", "conversion"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
